fixes #36 no longer overlapping actions and text
make open and delete function always displayed
center actions at top of block

--- a/template/style_collections.css
+++ b/template/style_collections.css
@@ -45,14 +45,22 @@
 .thumbnailCategory {
   position:relative;
 }
-.thumbnailCategory .collectionActions {
-  display:none;
-  position:absolute;
-  right:5px;
-  bottom:5px;
+
+#theCollectionPage .thumbnailCategory{
+  height:auto!important;
+  padding:10px 0;
 }
-.thumbnailCategory:hover .collectionActions {
-  display:block;
+
+.thumbnailCategory .collectionActions {
+  position:relative;
+  display:flex;
+  width:100%;
+  top: unset!important;
+  right: unset!important;
+  transform: unset!important;
+  margin-bottom:10px;
+  /* align-items: unset!important; */
+  justify-content:center;
 }
 
 /* MAIL AND SHARE POPIN */
